--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "open-pro-next",
   "version": "0.1.0",
+  "homepage": "https://evelynyu007.github.io/maq_v2",
   "private": true,
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -15,6 +18,7 @@
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
     "next": "^14.0.4",
+    "node.js": "^0.0.1-security",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "^5.3.3"
@@ -23,6 +27,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   }
